refactor: apply prettier

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title> Andrey Ovsiannikov CV</title>
     <link href="style.css"
-          rel="stylesheet"/>
+          rel="stylesheet">
 </head>
 <body>
 <section class="container">
@@ -61,14 +61,15 @@
         </ul>
     </article>
     <hr>
+    <footer>
+        <div id="footer">
+            <p><a href="https://github.com/"
+                  target="_blank">Github</a></p>
+            <p>28/12/2022</p>
+            <p><a href="https://app.rs.school/course/student/dashboard?course=upskill-me"
+                  target="_blank">RSSchool</a></p>
+        </div>
+    </footer>
 </section>
 </body>
-
-<footer id="footer">
-    <p><a href="https://github.com/"
-          target="_blank">Github</a></p>
-    <p>28/12/2022</p>
-    <p><a href="https://app.rs.school/course/student/dashboard?course=upskill-me"
-          target="_blank">RSSchool</a></p>
-</footer>
 </html>
